bases/helloweb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloweb-deployment
spec:
  selector:
    matchLabels:
      app: helloweb
  template:
    metadata:
      labels:
        app: helloweb
    spec:
      containers:
      - name: hello-app
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
